# meca500-control

./: .gitignore  README.md  config.py  gui.py  main.py  meca500.py  presets.json  pyproject.toml  stepper-test.py  stepper.py  utils.py
.spyproject/config/: workspace.ini
.spyproject/config/backups/: workspace.ini.bak
