[tool.poetry]
name = "meca500-control"
version = "0.1.0"
description = "Python control interface for the Meca500 robot arm."
authors = ["Elijah"]
readme = "README.md"
packages = [{ include = "*" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
mecademicpy = "^2.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

